--- a/Frontend/.prettierrc
+++ b/Frontend/.prettierrc
@@ -1,7 +1,35 @@
 {
     "semi": true,
     "singleQuote": false,
-    "trailingComma": "all",
     "tabWidth": 4,
-    "printWidth": 80
+    "trailingComma": "all",
+    "printWidth": 120,
+    "jsxSingleQuote": true,
+    "jsxBracketSameLine": true,
+    "overrides": [
+        {
+            "files": "*.ts",
+            "options": {
+                "semi": true,
+                "singleQuote": false,
+                "tabWidth": 4,
+                "trailingComma": "all",
+                "printWidth": 120,
+                "jsxSingleQuote": true,
+                "jsxBracketSameLine": true
+            }
+        },
+        {
+            "files": "*.tsx",
+            "options": {
+                "semi": true,
+                "singleQuote": false,
+                "tabWidth": 4,
+                "trailingComma": "all",
+                "printWidth": 120,
+                "jsxSingleQuote": true,
+                "jsxBracketSameLine": true
+            }
+        }
+    ]
 }
