--- a/Frontend/.prettierrc
+++ b/Frontend/.prettierrc
@@ -1,35 +1,8 @@
 {
     "semi": true,
-    "singleQuote": false,
     "tabWidth": 4,
     "trailingComma": "all",
-    "printWidth": 120,
-    "jsxSingleQuote": true,
-    "jsxBracketSameLine": true,
-    "overrides": [
-        {
-            "files": "*.ts",
-            "options": {
-                "semi": true,
-                "singleQuote": false,
-                "tabWidth": 4,
-                "trailingComma": "all",
-                "printWidth": 120,
-                "jsxSingleQuote": true,
-                "jsxBracketSameLine": true
-            }
-        },
-        {
-            "files": "*.tsx",
-            "options": {
-                "semi": true,
-                "singleQuote": false,
-                "tabWidth": 4,
-                "trailingComma": "all",
-                "printWidth": 120,
-                "jsxSingleQuote": true,
-                "jsxBracketSameLine": true
-            }
-        }
-    ]
+    "singleQuote": false,
+    "jsxSingleQuote": false,
+    "printWidth": 80
 }
