--- a/Frontend/.env.development
+++ b/Frontend/.env.development
@@ -1,1 +1,1 @@
-VITE_BACKEND_ENDPOINT = "http://localhost:8000/v1"
+VITE_BACKEND_ENDPOINT = "https://crispy-space-pancake-gwqxvg557p72v675-8000.app.github.dev/v1"
