fix files for build

--- a/Backend/.env.sample
+++ b/Backend/.env.sample
@@ -6,3 +6,4 @@ MONGO_DB_URI = "MONGODB_URI_HERE"
 DB_NAME = "NAME_FOR_DB_COLLECTION"
 EMAIL_USERNAME = "youremail"
 EMAIL_PASSWORD = "APP_PASSWORD_FOR_EMAIL"
+CORS_ORIGINS = http://localhost:5173,https://crispy-space-pancake-gwqxvg557p72v675-5173.app.github.dev
