--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v3
 
+            - name: Set up Docker
+              uses: docker/setup-buildx-action@v1
+
             - name: Set up SSH
               uses: webfactory/ssh-agent@v0.5.3
               with:
