update frontend endpoints env

--- a/Frontend/.env.production
+++ b/Frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_BACKEND_ENDPOINT = "api.taskmanager.khanalsaurav.com.np/v1"
-VITE_FRONTEND_URL = "taskmanager.khanalsaurav.com.np"
+VITE_BACKEND_ENDPOINT = "https://api.taskmanager.khanalsaurav.com.np/v1"
+VITE_FRONTEND_URL = "https://taskmanager.khanalsaurav.com.np"
