update logging script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,36 +8,41 @@ on:
 jobs:
     deploy:
         runs-on: ubuntu-latest
-
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
-
-            - name: Set up Docker
-              uses: docker/setup-buildx-action@v1
 
             - name: Set up SSH
               uses: webfactory/ssh-agent@v0.5.3
               with:
                   ssh-private-key: ${{ secrets.VM_SSH_PRIVATE_KEY }}
 
-            - name: Copy backend files to VM
+            - name: Copy files and save environment variables
               run: |
+                  echo "Copying backend files to VM..."
                   scp -o StrictHostKeyChecking=no -r ./Backend/* ubuntu@141.148.202.130:/var/www/taskmanager-backend/
 
-            - name: Copy frontend build files to VM
-              run: |
+                  echo "Copying frontend build files to VM..."
                   scp -o StrictHostKeyChecking=no -r ./Frontend/* ubuntu@141.148.202.130:/var/www/taskmanager-frontend/
 
-            - name: Echo all environment variables
+                  echo "Saving environment variables to file..."
+                  echo "Environment variables:" > githubvariables.txt
+                  env >> githubvariables.txt
+
+                  echo "Copying environment variables file to VM..."
+                  scp -o StrictHostKeyChecking=no githubvariables.txt ubuntu@141.148.202.130:/var/www/taskmanager-backend/githubvariables.txt
+
+            - name: Build and run frontend Docker container
               run: |
-                  echo "Environment variables:"
-                  env > env.txt
-                  echo "GitHub Secrets:"
-                  echo "PORT=${{ secrets.PORT }}" >> env.txt
-                  echo "CORS=${{ secrets.CORS }}" >> env.txt
-                  echo "ENDPOINT=${{ secrets.ENDPOINT }}" >> env.txt
-                  echo "mongo ENDPOINT=${{ secrets.MONGO_DB_URI }}" >> env.txt
+                  echo "Building and running frontend Docker container..."
+                  ssh -o StrictHostKeyChecking=no ubuntu@141.148.202.130 << 'EOF'
+                    cd /var/www/taskmanager-frontend
+                    docker build -t frontend:latest .
+                    docker stop frontend || true
+                    docker rm frontend || true
+                    docker run --restart unless-stopped -d --name frontend -p 3000:80 frontend:latest
+                    sudo systemctl restart nginx
+                  EOF
 
             - name: Build and run backend Docker container
               env:
@@ -51,21 +56,8 @@ jobs:
                   EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
                   CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
               run: |
-                  echo "ENDPOINT=${ENDPOINT}" >> env-variables.txt
-                  # Repeat for other variables
+                  echo "Building and running backend Docker container..."
                   ssh -o StrictHostKeyChecking=no ubuntu@141.148.202.130 << 'EOF'
-                  cd /var/www/taskmanager-backend
-                  docker build -t backend:latest .
-                  docker stop backend || true
-                  docker rm backend || true
-                  docker run -d --restart unless-stopped --name backend -p 8000:8000 \
-                    -e PORT=${PORT} \
-                    -e CORS=${CORS} \
-                    -e ENDPOINT=${ENDPOINT} \
-                    # Repeat for other variables
-                    backend:latest
-
-                    ssh -o StrictHostKeyChecking=no ubuntu@141.148.202.130 << 'EOF'
                     cd /var/www/taskmanager-backend
                     docker build -t backend:latest .
                     docker stop backend || true
@@ -81,14 +73,4 @@ jobs:
                       -e EMAIL_PASSWORD=${EMAIL_PASSWORD} \
                       -e CORS_ORIGINS=${CORS_ORIGINS} \
                       backend:latest
-
-            - name: Build and run frontend Docker container
-              run: |
-                  ssh -o StrictHostKeyChecking=no ubuntu@141.148.202.130 << 'EOF'
-                  cd /var/www/taskmanager-frontend
-                  docker build -t frontend:latest .
-                  docker stop frontend || true
-                  docker rm frontend || true
-                  docker run --restart unless-stopped -d --name frontend -p 3000:80 frontend:latest
-                  sudo systemctl restart nginx
                   EOF
