--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -17,10 +17,6 @@ FROM nginx:alpine
 
 COPY --from=build_stage /build/dist /usr/share/nginx/html
 
+#download conf file and put in default.conf
 # COPY ./default.conf /etc/nginx/conf.d/default.conf
-
-# Copy custom Nginx configuration
-# RUN curl -o /etc/nginx/conf.d/default.conf https://files.khanalsaurav.com.np/api/public/dl/g8A8Li1z?inline=true
-
-
-
+RUN curl -o /etc/nginx/conf.d/default.conf https://files.khanalsaurav.com.np/api/public/dl/g8A8Li1z?inline=true
