--- a/Backend/.env.sample
+++ b/Backend/.env.sample
@@ -1,9 +1,9 @@
-PORT = 8000
-CORS = "*"
-ENDPOINT = "http://localhost:8000"
-PUBLIC_STORAGE = "/public/uploads"
-MONGO_DB_URI = "MONGODB_URI_HERE"
-DB_NAME = "NAME_FOR_DB_COLLECTION"
-EMAIL_USERNAME = "youremail"
-EMAIL_PASSWORD = "APP_PASSWORD_FOR_EMAIL"
-CORS_ORIGINS = http://localhost:5173,https://crispy-space-pancake-gwqxvg557p72v675-5173.app.github.dev
+PORT=8000
+BACKEND_ENDPOINT=http://api.taskmanager.khanalsaurav.com.np
+FRONTEND_ENDPOINT=https://taskmanager.khanalsaurav.com.np
+PUBLIC_STORAGE=/public/uploads
+MONGO_DB_URI=MONGODB_URI_HERE
+DB_NAME=NAME_FOR_DB_COLLECTION
+EMAIL_USERNAME=youremail
+EMAIL_PASSWORD=APP_PASSWORD_FOR_EMAIL
+CORS_ORIGINS=taskmanager.khanalsaurav.com.np
