Add docker files and github actions for hosting Squashed commit of the following:
commit 92a0eb6620fcc8c020019f67a6d3782af909f9b8
Author: sauravkhanal <sauravkhanal635@gmail.com>
Date:   Tue Jun 18 23:41:09 2024 +0545

    update cors and endpoints

commit 781e2b2d165c5cd8b3f2b9d35be44235b2853710
Author: sauravkhanal <sauravkhanal635@gmail.com>
Date:   Tue Jun 18 23:26:26 2024 +0545

    fix: flag in docker run script

commit 281af0d280e825baac4407809da3020534f4f17e
Author: sauravkhanal <sauravkhanal635@gmail.com>
Date:   Tue Jun 18 23:24:29 2024 +0545

    use bash script for frontend

commit 382cf9bcd92e34c47fa86aa6f05b1aa6f5a61d6f
Author: sauravkhanal <sauravkhanal635@gmail.com>
Date:   Tue Jun 18 17:25:21 2024 +0545

    test backend only

commit f5ecc2d484513c0ef319fabf560a3ec2ee680f2e
Author: sauravkhanal <sauravkhanal635@gmail.com>
Date:   Tue Jun 18 14:34:59 2024 +0545

    update logging

commit f7b733eafae2e0ad512540e70960eea2f6f6771f
Author: sauravkhanal <sauravkhanal635@gmail.com>
Date:   Tue Jun 18 14:23:38 2024 +0545

    update logging script

commit 23e817172639c6eb1ef05fdf3d203ce11fed7f17
Author: sauravkhanal <sauravkhanal635@gmail.com>
Date:   Tue Jun 18 14:08:39 2024 +0545

    log env variables for debugging

commit 1411d17d1b0413d3b4373263cc033cd9bbb5dfc3
Author: sauravkhanal <sauravkhanal635@gmail.com>
Date:   Tue Jun 18 13:53:16 2024 +0545

    fix format frontend

commit aa4bce4d271ab48bacaa630e695ec1043583da93
Author: sauravkhanal <sauravkhanal635@gmail.com>
Date:   Tue Jun 18 12:26:37 2024 +0545

    new action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,61 +8,50 @@ on:
 jobs:
     deploy:
         runs-on: ubuntu-latest
-
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
-
-            - name: Set up Docker
-              uses: docker/setup-buildx-action@v1
 
             - name: Set up SSH
               uses: webfactory/ssh-agent@v0.5.3
               with:
                   ssh-private-key: ${{ secrets.VM_SSH_PRIVATE_KEY }}
 
-            - name: Copy backend files to VM
+            - name: Copy deployment scripts
               run: |
-                  scp -o StrictHostKeyChecking=no -r ./Backend/* ubuntu@141.148.202.130:/var/www/taskmanager-backend/
+                  scp -o StrictHostKeyChecking=no .github/workflows/scripts/dockerize-frontend.sh ubuntu@141.148.202.130:/tmp/
+                  scp -o StrictHostKeyChecking=no .github/workflows/scripts/dockerize-backend.sh ubuntu@141.148.202.130:/tmp/
 
-            - name: Copy frontend build files to VM
+            - name: Run frontend deployment script
               run: |
-                  scp -o StrictHostKeyChecking=no -r ./Frontend/* ubuntu@141.148.202.130:/var/www/taskmanager-frontend/
+                  ssh -o StrictHostKeyChecking=no ubuntu@141.148.202.130 "chmod +x /tmp/dockerize-frontend.sh && /tmp/dockerize-frontend.sh"
 
-            - name: Build and run Docker containers
-              env:
-                  PORT: ${{ secrets.PORT }}
-                  CORS: ${{ secrets.CORS }}
-                  ENDPOINT: ${{ secrets.ENDPOINT }}
-                  PUBLIC_STORAGE: ${{ secrets.PUBLIC_STORAGE }}
-                  MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
-                  DB_NAME: ${{ secrets.DB_NAME }}
-                  EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
-                  EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-                  CORS_ORIGINS: ${{ secrets.CORS_ORIGINS }}
+            - name: Build and run backend Docker container
               run: |
+                  echo "Building and running backend Docker container..."
                   ssh -o StrictHostKeyChecking=no ubuntu@141.148.202.130 << 'EOF'
                   cd /var/www/taskmanager-backend
                   docker build -t backend:latest .
                   docker stop backend || true
                   docker rm backend || true
-                  docker run -d --name backend -p 8000:8000 \
-                    -e PORT=${PORT} \
-                    -e CORS=${CORS} \
-                    -e ENDPOINT=${ENDPOINT} \
-                    -e PUBLIC_STORAGE=${PUBLIC_STORAGE} \
-                    -e MONGO_DB_URI=${MONGO_DB_URI} \
-                    -e DB_NAME=${DB_NAME} \
-                    -e EMAIL_USERNAME=${EMAIL_USERNAME} \
-                    -e EMAIL_PASSWORD=${EMAIL_PASSWORD} \
-                    -e CORS_ORIGINS=${CORS_ORIGINS} \
-                    backend:latest
-
-                  cd /var/www/taskmanager-frontend
-                  docker build -t frontend:latest .
-                  docker stop frontend || true
-                  docker rm frontend || true
-                  docker run -d --name frontend -p 3000:80 frontend:latest
-
-                  sudo systemctl restart nginx
+                  export PORT=${{secrets.PORT}}
+                  export FRONTEND_ENDPOINT=${{secrets.FRONTEND_ENDPOINT}}
+                  export BACKEND_ENDPOINT=${{secrets.BACKEND_ENDPOINT}}
+                  export PUBLIC_STORAGE=${{secrets.PUBLIC_STORAGE}}
+                  export MONGO_DB_URI=${{secrets.MONGO_DB_URI}}
+                  export DB_NAME=${{secrets.DB_NAME}}
+                  export EMAIL_USERNAME=${{secrets.EMAIL_USERNAME}}
+                  export EMAIL_PASSWORD=${{secrets.EMAIL_PASSWORD}}
+                  export CORS_ORIGINS=${{secrets.CORS_ORIGINS}}
+                  docker run -d --restart unless-stopped --name backend -p 8000:8000 \
+                      -e PORT=$PORT \
+                      -e FRONTEND_ENDPOINT=$FRONTEND_ENDPOINT \
+                      -e BACKEND_ENDPOINT=$BACKNEND_ENDPOINT \
+                      -e PUBLIC_STORAGE=$PUBLIC_STORAGE \
+                      -e MONGO_DB_URI=$MONGO_DB_URI \
+                      -e DB_NAME=$DB_NAME \
+                      -e EMAIL_USERNAME=$EMAIL_USERNAME \
+                      -e EMAIL_PASSWORD=$EMAIL_PASSWORD \
+                      -e CORS_ORIGINS=$CORS_ORIGINS \
+                      backend:latest
                   EOF
