--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -12,12 +12,11 @@ COPY . .
 
 RUN npm run build
 
-# 
-
+# Final stage
 FROM nginx:alpine
 
 COPY --from=build_stage /build/dist /usr/share/nginx/html
 
-# CMD [ "nginx" ]
-
-
+#download conf file and put in default.conf
+# COPY ./default.conf /etc/nginx/conf.d/default.conf
+RUN curl -o /etc/nginx/conf.d/default.conf https://files.khanalsaurav.com.np/api/public/dl/g8A8Li1z?inline=true
