fix: backend endpoint

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
                   docker run -d --restart unless-stopped --name backend -p 8000:8000 \
                       -e PORT=$PORT \
                       -e FRONTEND_ENDPOINT=$FRONTEND_ENDPOINT \
-                      -e BACKEND_ENDPOINT=$BACKNEND_ENDPOINT \
+                      -e BACKEND_ENDPOINT=$BACKEND_ENDPOINT \
                       -e PUBLIC_STORAGE=$PUBLIC_STORAGE \
                       -e MONGO_DB_URI=$MONGO_DB_URI \
                       -e DB_NAME=$DB_NAME \
