--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
                   export EMAIL_PASSWORD=${{secrets.EMAIL_PASSWORD}}
                   export CORS_ORIGINS=${{secrets.CORS_ORIGINS}}
                   echo  before-run
-                  docker run -d --restart unless-stopped --name backend -p 8000:8000 \
+                  sudo docker run -d --name backend -p 8000:8000 \
                   -e PORT=$PORT \
                   -e FRONTEND_ENDPOINT=$FRONTEND_ENDPOINT \
                   -e BACKEND_ENDPOINT=$BACKEND_ENDPOINT \
